2 files modified, 4 added

--- a/src/index.html
+++ b/src/index.html
@@ -1,1 +1,24 @@
-<my-app>loading</my-app>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>ClinicManagementClient</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="./assets/css/main.css" />
+    <link rel="./assets/css/bootstrap.min.css" />
+  </head>
+
+  <body>
+    <app-root></app-root>
+    <div class="color-bg"></div>
+<!-- Jquery Core Js --> 
+<script src="./assets/js/libscripts.bundle.js.download"></script> <!-- Lib Scripts Plugin Js -->
+ 
+<script src="./assets/js/vendorscripts.bundle.js.download"></script> <!-- Lib Scripts Plugin Js --> 
+
+<script src="./assets/js/mainscripts.bundle.js.download"></script><!-- Custom Js -->
+
+
+  </body>
+</html>
